# csaf

./: .checkov.yaml  .gitignore  .gitmodules  .rustfmt.toml  CODING_GUIDELINES.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs  bump_version.sh  convert-cwe-to-csv.xslt  create-new-testfile.sh  generate_go_bindings.sh  generate_wasm_bindings.sh  trivy.yaml  uniffi_patch_wasm.py  update_all_cwe.sh  update_assets.sh  update_cwe.sh  update_ext_assets.sh
csaf-converter/: Cargo.toml
csaf-ffi/: Cargo.toml  build.rs
csaf-ffi/src/: document.rs  lib.rs  types.rs
csaf-lib/: Cargo.toml  build.rs  csaf_json_schema.json
csaf-lib/src/csaf/: getter_traits.rs  helpers.rs  loader.rs  mod.rs  product_helper.rs  product_helpers.rs  schema.rs  test_helper.rs  validation.rs
csaf-lib/src/csaf/csaf2_0/: getter_implementations.rs  loader.rs  mod.rs  product_helper.rs  schema.rs  validation.rs
csaf-lib/src/csaf/csaf2_1/: csaf.json  csaf_json_schema.json  getter_implementations.rs  loader.rs  mod.rs  product_helper.rs  schema.rs  ssvc-1-0-1-merged.schema.json  ssvc_dp_schema.rs  ssvc_schema.rs  validation.rs
csaf-lib/src/csaf/validations/: mod.rs  test_6_1_01.rs  test_6_1_02.rs  test_6_1_03.rs  test_6_1_05.rs  test_6_1_07.rs  (+16 more)
csaf-macros/: Cargo.toml
csaf-macros/src/: lib.rs
csaf-result-json/: Cargo.toml  result.json
csaf-result-json/src/: compare.rs  convert.rs  main.rs  result.rs
csaf-rs/: Cargo.toml  build.rs
csaf-rs/assets/: README.md  csaf-2-0-json-schema.json  csaf-2-1-json-schema.json  csaf_2.1_json_schema.json  cvss-v4.0.rev.json  scancode-licensedb.json
csaf-rs/assets/cwe/: cwe-v1.0.csv  cwe-v1.10.csv  cwe-v1.12.csv  cwe-v1.2.csv  cwe-v2.9.csv  cwe-v3.1.csv  cwe-v3.2.csv  cwe-v4.1.csv  cwe-v4.14.csv  cwe-v4.6.csv  cwe_1.0.1_2008-10-14.csv  cwe_1.0_.csv  cwe_1.10_2010-09-27.csv  cwe_1.11_2010-12-13.csv  cwe_1.12_2011-03-30.csv  cwe_1.1_2008-11-24.csv  cwe_1.2_2009-01-12.csv  cwe_1.3_2009-03-10.csv  cwe_1.4_2009-05-27.csv  cwe_1.5_2009-07-27.csv  cwe_1.6_2009-10-29.csv  cwe_1.7_2009-12-28.csv  cwe_1.8.1_2010-04-05.csv  cwe_1.8_2010-02-16.csv  cwe_1.9_2010-06-21.csv  cwe_2.10_2017-01-19.csv  cwe_2.11_2017-05-05.csv  cwe_2.12_2017-11-08.csv  cwe_2.1_2011-09-13.csv  cwe_2.2_2012-05-14.csv  cwe_2.3_2012-10-30.csv  cwe_2.4_2013-02-21.csv  cwe_2.5_2013-07-17.csv  cwe_2.6_2014-02-19.csv  cwe_2.8_2014-07-31.csv  cwe_2.9_2015-12-07.csv  cwe_3.0_2017-11-08.csv  cwe_3.1_2018-03-29.csv  cwe_3.2_2019-01-03.csv  cwe_3.3_2019-06-20.csv  (+21 more)
csaf-rs/benches/: validation_benchmark.rs
csaf-rs/src/: csaf_traits.rs  cwe_files.rs  document_category_test_helper.rs  helpers.rs  json.rs  lib.rs  product_helpers.rs  profile_test_helper.rs  test_helper.rs  test_result_comparison.rs  test_structure.rs  test_validation.rs  two_step_validation.rs  validation.rs  validation_result.rs  validation_types.rs  version_helpers.rs  version_number.rs  wasm.rs
csaf-rs/src/converter/: mod.rs
csaf-rs/src/csaf/: csaf_traits.rs  getter_traits.rs  helpers.rs  loader.rs  mod.rs  product_helpers.rs  raw.rs  test_helper.rs  validation.rs
csaf-rs/src/csaf2_0/: csaf_implementations.rs  loader.rs  mod.rs  schema.generated.rs  test_structure_impl.rs  testcases.generated.rs  validation.rs
csaf-rs/src/csaf2_1/: csaf_implementations.rs  loader.rs  mod.rs  schema.generated.rs  ssvc_dp.generated.rs  ssvc_dp_selection_list.generated.rs  test_structure_impl.rs  testcases.generated.rs  validation.rs
csaf-rs/src/cvss/: mod.rs  v2.rs  v3.rs  v4.rs
csaf-rs/src/extractor/: collect.rs  collect_tree.rs  combine.rs  convert.rs  extract.rs  mod.rs  navigate.rs  test.rs  traits.rs  visit_json.rs  visit_stream.rs
csaf-rs/src/language_tag_parser/: mod.rs  parser.rs  tests.rs
csaf-rs/src/macros/: mod.rs  string_newtype.rs  test_gen.rs
csaf-rs/src/schema/: mod.rs
csaf-rs/src/validations/: mod.rs  test_6_1_01.rs  test_6_1_02.rs  test_6_1_03.rs  test_6_1_04.rs  test_6_1_05.rs  test_6_1_06.rs  test_6_1_07.rs  test_6_1_08.rs  test_6_1_09.rs  test_6_1_10.rs  test_6_1_11.rs  test_6_1_12.rs  test_6_1_13.rs  test_6_1_14.rs  test_6_1_15.rs  test_6_1_16.rs  test_6_1_17.rs  test_6_1_18.rs  test_6_1_19.rs  test_6_1_20.rs  test_6_1_21.rs  test_6_1_22.rs  test_6_1_23.rs  test_6_1_24.rs  test_6_1_25.rs  test_6_1_26.rs  test_6_1_27_01.rs  test_6_1_27_02.rs  test_6_1_27_03.rs  test_6_1_27_04.rs  test_6_1_27_05.rs  test_6_1_27_06.rs  test_6_1_27_07.rs  test_6_1_27_08.rs  test_6_1_27_09.rs  test_6_1_27_1.rs  test_6_1_27_10.rs  test_6_1_27_11.rs  test_6_1_27_12.rs  (+99 more)
csaf-rs/tests/: purl_spec_conformance.rs  purl_spec_known_gaps.json  string_newtype_ergonomics.rs
csaf-schema/: Cargo.toml  build.rs
csaf-service/: Cargo.toml  Dockerfile  README.md
csaf-service/src/: main.rs  models.rs  routes.rs  test_helpers.rs
csaf-service/src/handlers/: get_preset_tests.rs  get_presets.rs  get_tests.rs  health.rs  legacy.rs  mod.rs  validate.rs
csaf-validator/: Cargo.toml  LICENSE  build.rs
csaf-validator/src/: main.rs
csaf-validator/src/web/: mod.rs
csaf-validator/web-ui/: .gitignore  package.json  vite.config.ts
csaf-validator/web-ui/src/: App.tsx  csaf-rs  types.ts  wasm.d.ts
dp-schema/: Cargo.toml  build.rs
dp-schema/src/: decision_point.rs  lib.rs
type-generator/: Cargo.toml  README.md
type-generator/assets/: README.md  csaf_2.0_testcases_json_schema.json  csaf_2.1_testcases_json_schema.json  testresult_json_schema.json
type-generator/assets/tests/: supplementary_tests.md
type-generator/src/: build_errors.rs  build_helper.rs  file_helper.rs  main.rs  schema_generator.rs  testcase_generator.rs
type-generator/src/language_tags/: extract.rs  generate.rs  mod.rs  tests.rs
type-generator/src/rvisc/: extract.rs  generate.rs  mod.rs
type-generator/src/schema/: config.rs  extract.rs  generate.rs  mod.rs
type-generator/src/testcases/: config.rs  extract.rs  generate.rs  mod.rs
type-generator/src/translation/: extract.rs  generate.rs  mod.rs
type-generator/src/utils/: codegen_snippets.rs  mod.rs  read_write_fs.rs  write_to_fs.rs
type-generator/src/validation_schemas/: config.rs  generate.rs  mod.rs
(+517 files in other folders)
