[package]
name = "csaf-converter"
description = "A converter for the CSAF standard written in Rust (converts 2.0 to 2.1)"
license.workspace = true
repository.workspace = true
keywords = ["csaf", "converter"]
readme.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
csaf-rs = { path = "../csaf-rs", version = "0.5.0", features = ["default", "converter"] }
anyhow = "1.0.93"
clap = { version = "4.5.23", features = ["derive"] }
