[package]
name = "csaf-ffi"
description = "UniFFI bindings for the csaf-rs CSAF validation library"
license = "Apache-2.0"
version = "0.3.1"
edition = "2021"
rust-version = "1.88.0"
publish = false

[lib]
name = "csaf_ffi"
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
csaf = { package = "csaf-rs", path = "../csaf-rs", default-features = false }
uniffi = { version = "0.31.0", features = ["scaffolding-ffi-buffer-fns"] }
serde_json = "1"
thiserror = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uniffi = { version = "0.31.0", features = ["scaffolding-ffi-buffer-fns", "wasm-unstable-single-threaded"] }

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }
