[package]
name = "csaf-ffi"
description = "UniFFI bindings for the csaf-rs CSAF validation library"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
publish = false

[lib]
name = "csaf_ffi"
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
csaf = { package = "csaf-rs", path = "../csaf-rs", default-features = false }
uniffi = { version = "0.32.0", features = ["scaffolding-ffi-buffer-fns"] }
serde_json = "1"
thiserror = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uniffi = { version = "0.32.0", features = ["scaffolding-ffi-buffer-fns", "wasm-unstable-single-threaded"] }

[build-dependencies]
uniffi = { version = "0.32.0", features = ["build"] }
