[package]
name = "csaf-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
regress = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
lazy_static = "1.5.0"

[build-dependencies]
schemars = "0.8.21"
serde_json = "1.0"
typify = "0.2.0"
syn = "2.0.85"
prettyplease = "0.2.25"
thiserror = "2.0.0"
