[package]
name = "csaf-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
regress = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

[build-dependencies]
schemars = "0.8"
serde_json = "1"
typify = "0.3"
syn = "2"
prettyplease = "0.2"
thiserror = "2"
