[package]
name = "csaf-result-json"
description = "A tool for generating and checking CSAF validation result files"
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anstream = "0.6.7"
anstyle = "1.0.8"
anyhow = "1.0.93"
clap = { version = "4.5.23", features = ["derive"] }
csaf-rs = { path = "../csaf-rs", version = "0.5.0" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
