[package]
name = "csaf-rs"
description = "A parser for the CSAF standard written in Rust"
license = "Apache-2.0"
repository = "https://github.com/csaf-rs/csaf"
keywords = ["csaf"]
readme = "../README.md"
version = "0.2.1"
edition = "2024"

[dependencies]
regress = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
glob = "0.3"
rust-embed = { version = "8", features = ["include-exclude"] }
packageurl = "=0.5.0-rc.9"
uuid = { version = "1.17.0", features = ["v7", "serde"] }

[build-dependencies]
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typify = "0.4"
glob = "0.3"
syn = "2"
prettyplease = "0.2"
thiserror = "2"
json_dotpath = "1.1.0"
