[package]
name = "csaf-rs"
description = "A parser for the CSAF standard written in Rust"
license = "Apache-2.0"
repository = "https://github.com/csaf-rs/csaf"
keywords = ["csaf"]
readme = "../README.md"
version = "0.4.1"
edition = "2024"
rust-version = "1.88.0"

[lints]
workspace = true

[lib]
name = "csaf"
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
converter = []
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:tsify", "dep:console_error_panic_hook"]

[dependencies]
cvss-rs = "0.3.0"
regress = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = {  version = "1",  features = ["preserve_order"]}
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rust-embed = { version = "8", features = ["include-exclude"] }
packageurl = "0.6.0-rc.1"
uuid = { version = "1.17.0", features = ["v7", "serde"] }
tsify = { version = "0.5", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
semver = { version = "1" }
thiserror = "2"
jsonschema = { version = "0.45.0", default-features = false }
spdx = "0.13.4"
oxilangtag = "0.1.5"
ssvc = "0.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.17.0", features = ["v7", "serde", "js"] }

[dev-dependencies]
rstest = "0.26.1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
