[package]
name = "csaf-rs"
description = "A parser for the CSAF standard written in Rust"
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build/main.rs"

[lints]
workspace = true

[lib]
name = "csaf"
crate-type = ["rlib"]

[features]
default = []
converter = []

[dependencies]
cvss-rs = "0.4.0"
regress = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.131", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rust-embed = { version = "8", features = ["include-exclude"] }
packageurl = "0.7"
uuid = { version = "1.17.0", features = ["v7", "serde"] }
semver = { version = "1" }
jsonschema = { version = "0.48.5", default-features = false }
spdx = "0.13.4"
oxilangtag = "0.1.5"
ssvc = "0.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.17.0", features = ["v7", "serde", "js"] }

[build-dependencies]
ssvc = "0.1.0"
serde_json = { version = "1", features = ["preserve_order"] }

[dev-dependencies]
rstest = "0.26.1"
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "validation_benchmark"
harness = false

