[package]
name = "csaf-service"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
publish = false

[[bin]]
name = "csaf-service"
path = "src/main.rs"

[dependencies]
csaf = { path = "../csaf-rs", package = "csaf-rs", version = "0.4.1" }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

