[package]
name = "csaf-validator"
description = "A validator for the CSAF standard written in Rust"
license = "Apache-2.0"
repository = "https://github.com/csaf-rs/csaf"
keywords = ["csaf"]
readme = "../README.md"
version = "0.3.0"
edition = "2024"
rust-version = "1.85.1"

[dependencies]
csaf-rs = { path = "../csaf-rs", version = "0.3.0" }
anyhow = "1.0.93"
clap = { version = "4.5.23", features = ["derive"] }
