[package]
name = "csaf-validator"
description = "A validator for the CSAF standard written in Rust"
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anstream = "0.6.7"
anstyle = "1.0.8"
anyhow = "1.0.93"
clap = { version = "4.5.23", features = ["derive"] }
csaf-rs = { path = "../csaf-rs", version = "0.5.1" }
