[package]
name = "dp-schema"
version = "0.2.1"
edition = "2024"

[lib]
name = "dp_schema"
path = "src/lib.rs"

[dependencies]
regress = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
serde_json = "1"
typify = "0.4"
schemars = "0.8"
prettyplease = "0.2"
syn = "2"