[package]
name = "type-generator"
description = "A generator for Rust types from CSAF JSON Schema definitions"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.88.0"
publish = false

[dependencies]
schemars = "0.8"
clap = {version =  "4.5.53", features = ["derive"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = { version = "0.37.4", default-features = false }
syn = "2"
thiserror = "2"
json_dotpath = "1"
typify = "0.5"
prettyplease = "0.2"
quote = "1"
proc-macro2 = "1"