[package]
name = "type-generator"
description = "A generator for Rust types from CSAF JSON Schema definitions"
publish = false
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
schemars = "0.8"
clap = {version =  "4.5.53", features = ["derive"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = "2"
thiserror = "2"
json_dotpath = "1"
typify = "0.6"
prettyplease = "0.3"
quote = "1"
proc-macro2 = "1"
regress = "0.11"

[dev-dependencies]
rstest = "0.26.1"
